--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lib/",
     "src/"
   ],
-  "name": "textlint-rule-no-invalid-control-character",
+  "name": "@textlint-rule/textlint-rule-no-invalid-control-character",
   "version": "1.0.0",
   "description": "textlint rule check unnessary control character in the document.",
   "main": "lib/textlint-rule-no-invalid-control-character.js",
