--- a/package.json
+++ b/package.json
@@ -16,12 +16,11 @@
   "main": "lib/textlint-rule-no-invalid-control-character.js",
   "scripts": {
     "test": "textlint-scripts test",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "precommit": "lint-staged",
-    "postcommit": "git reset",
     "prepublish": "npm run --if-present build",
     "build": "textlint-scripts build",
-    "watch": "textlint-scripts build --watch"
+    "watch": "textlint-scripts build --watch",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "prepare": "git config --local core.hooksPath .githooks"
   },
   "keywords": [
     "textlintrule"
@@ -35,19 +34,19 @@
   },
   "homepage": "https://github.com/textlint-rule/textlint-rule-no-invalid-control-character",
   "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^6.0.0",
-    "prettier": "^1.9.2",
-    "textlint-scripts": "^1.4.1"
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "textlint-scripts": "^3.0.0"
   },
   "prettier": {
+    "singleQuote": false,
     "printWidth": 120,
-    "tabWidth": 4
+    "tabWidth": 4,
+    "trailingComma": "none"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,css}": [
-      "prettier --write",
-      "git add"
+      "prettier --write"
     ]
   },
   "dependencies": {
