BREAKING CHANGE: require Node.js 18+ (#15)
* refactor: remove execall && require Node.js 18+

* 2.1.0

* Update package-lock.json+1

* CI: update node versions

* CI: use npm

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
   },
   "homepage": "https://github.com/textlint-rule/textlint-rule-no-invalid-control-character",
   "devDependencies": {
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
-    "textlint-scripts": "^3.0.0"
+    "@textlint/types": "^14.0.4",
+    "lint-staged": "^15.2.8",
+    "prettier": "^3.3.3",
+    "textlint-scripts": "^14.0.4",
+    "textlint-tester": "^14.0.4"
   },
   "prettier": {
     "singleQuote": false,
@@ -49,7 +51,5 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
-    "execall": "^1.0.0"
-  }
+  "packageManager": "npm@10.8.2+sha512.c7f0088c520a46596b85c6f8f1da943400199748a0f7ea8cb8df75469668dc26f6fb3ba26df87e2884a5ebe91557292d0f3db7d0929cdb4f14910c3032ac81fb"
 }
